# TemeAD

LAB-8/: CMakeLists.txt  main.c
Tema-LAB3/: io.c  io.h  main.c  makefile  mat.c  mat.h  mat_in.txt  mat_out.txt
Tema-LAB4/: bubble-sort.c  main.c  sort.h  vector.c  vector.h
Tema-LAB5/: CMakeLists.txt  basic.c  basic.h  bubble_sort.c  insertion_sort.c  main.c  merge_sort.c  quick_sort.c  selection_sort.c  sort.h  vectors.c  vectors.h
Tema-LAB6/: main.c
